2007-10-10  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c: Beautify the ClutterActor documentation.

2007-10-10  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c: Remove the ::event-after signal:
	three event layers to connect to seems a bit overkill.

	(clutter_actor_event): Return FALSE, not TRUE by default,
	as g_signal_emit() will change the return value if no
	handlers are connected

	* clutter/clutter-stage.c: Emit ::notify when we change
	the fullscreen property.

	* clutter/clutter-script.c: Add more documentation for the
	definition format and keywords.

	(translate_property): Collapse the G_TYPE_ENUM and G_TYPE_FLAGS
	cases into one, to simplify the code.

	* tests/test-script.c: Test enumeration conversion by using
	a value different from the default.

2007-10-10  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-actor.c:
	* clutter/clutter-actor.h:
	* clutter/clutter-event.c:
	* clutter/clutter-main.c:
	* tests/test-events.c:
	Add basic W3 DOM  event 'capture' like functionality.

2007-10-10  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-script-private.h:
	* clutter/clutter-script.c: Parse flags like we parse enums.

2007-10-10  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/json/json-types.h:
	* clutter/json/json-array.c:
	* clutter/json/json-object.c: Resync with the upstream copy
	of JSON-GLib; add json_object_remove_member() and
	json_array_remove_element() and fix the g_hash_table_get_keys()
	replacement for GLib 2.12.

	* clutter/clutter-script.c: Clean up the complex properties
	parsing code.

2007-10-10  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-script.c (json_object_end): Add "type_func"
	to the list of attributes we skip.

2007-10-10  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/json/json-parser.c: Use the commodity JsonNode API
	and accept bare values as root nodes.

	* clutter/clutter-script-private.h: